--- a/admin/app/templates/authenticated/certifications/certification.hbs
+++ b/admin/app/templates/authenticated/certifications/certification.hbs
@@ -1,9 +1,12 @@
 <nav class="navbar">
   <LinkTo @route="authenticated.certifications.certification.informations" @model={{@model.id}} class="navbar-item">
-      Informations
+    Informations
   </LinkTo>
   <LinkTo @route="authenticated.certifications.certification.details" @model={{@model.id}} class="navbar-item">
-      Détails
+    Détails
+  </LinkTo>
+  <LinkTo @route="authenticated.certifications.certification.profile" @model={{@model.id}} class="navbar-item">
+    Profile
   </LinkTo>
 </nav>
 <section>
