--- a/admin/app/styles/components/target-profiles/details.scss
+++ b/admin/app/styles/components/target-profiles/details.scss
@@ -65,4 +65,9 @@
     color: $grey-20;
     font-size: 1.7rem;
   }
+
+  &--tested-in-certif {
+    color: $information-light;
+    font-size: 1.7rem;
+  }
 }
