--- a/mon-pix/app/styles/components/_new-information.scss
+++ b/mon-pix/app/styles/components/_new-information.scss
@@ -104,4 +104,10 @@
       margin: 0;
     }
   }
+
+  &-text__button {
+    margin-top: 20px;
+    padding: 10px 20px;
+    display: inline-table;
+  }
 }
