--- a/mon-pix/app/templates/components/new-information.hbs
+++ b/mon-pix/app/templates/components/new-information.hbs
@@ -8,6 +8,9 @@
     {{/if}}
     <div class="new-information-content__text {{@textAlignment}} {{@textColorClass}}">
       {{{@information}}}
+      {{#if @linkText}}
+        <LinkTo @route="{{@linkTo}}" class="new-information-content-text__button button button--extra-thin button--link">{{@linkText}}</LinkTo>
+      {{/if}}
     </div>
   </div>
 
