--- a/mon-pix/app/components/dashboard/content.hbs
+++ b/mon-pix/app/components/dashboard/content.hbs
@@ -1,17 +1,24 @@
 <section class="page-container dashboard-content">
   <h1 class="sr-only">{{t 'pages.dashboard.title'}}</h1>
 
-  {{#unless this.hasUserSeenNewDashboardInfo}}
+  <div class="dashboard-content__banner">
     <section class="dashboard-content__section" data-test-new-dashboard-info>
-      <NewInformation @information="{{t 'pages.dashboard.presentation' firstname=this.userFirstname}}"
-                      @image="/images/discovery_TDB_pix.svg"
-                      @backgroundColorClass="new-information--blue-gradient-background"
-                      @textColorClass="new-information--white-text"
-                      @closeaction={{this.closeInformationAboutNewDashboard}}/>
+      {{#unless this.hasUserSeenNewDashboardInfo}}
+          <NewInformation @information="{{t 'pages.dashboard.presentation' firstname=this.userFirstname}}"
+                          @image="/images/discovery_TDB_pix.svg"
+                          @backgroundColorClass="new-information--blue-gradient-background"
+                          @textColorClass="new-information--white-text"
+                          @closeaction={{this.closeInformationAboutNewDashboard}}/>
+      {{/unless}}
     </section>
-  {{/unless}}
+  </div>
 
-  {{#if this.hasNothingToShow}}
+  <div class="dashboard-content__score">
+    SCORE PIX
+  </div>
+
+  <div class="dashboard-content__cards">
+    {{#if this.hasNothingToShow}}
     <section class="dashboard-content__section" data-test-empty-dashboard>
       <div class="dashboard-content-section--with-button">
         <NewInformation @information="{{t 'pages.dashboard.empty-dashboard.message'}}"
@@ -25,34 +32,41 @@
   {{/if}}
 
   {{#if this.hasCampaignParticipationOverviews}}
-    <section class="dashboard-content__section" data-test-campaign-participation-overviews>
-      <h2 class="dashboard-content-section__title">{{t 'pages.dashboard.campaigns.title'}}</h2>
-      <p class="dashboard-content-section__subtitle">{{t 'pages.dashboard.campaigns.subtitle'}}</p>
+      <section class="dashboard-content__section" data-test-campaign-participation-overviews>
+        <h2 class="dashboard-content-section__title">{{t 'pages.dashboard.campaigns.title'}}</h2>
+        <p class="dashboard-content-section__subtitle">{{t 'pages.dashboard.campaigns.subtitle'}}</p>
 
-      <CampaignParticipationOverview::Grid @model={{@model.campaignParticipationOverviews}}/>
-    </section>
-  {{/if}}
+        <CampaignParticipationOverview::Grid @model={{@model.campaignParticipationOverviews}}/>
+      </section>
+    {{/if}}
 
-  {{#if this.hasStartedCompetences}}
-    <section class="dashboard-content__section" data-test-started-competences>
-      <h2 class="dashboard-content-section__title">{{t 'pages.dashboard.started-competences.title'}}</h2>
-      <p class="dashboard-content-section__subtitle">{{t 'pages.dashboard.started-competences.subtitle'}}</p>
+    {{#if this.hasStartedCompetences}}
+      <section class="dashboard-content__section" data-test-started-competences>
+        <h2 class="dashboard-content-section__title">{{t 'pages.dashboard.started-competences.title'}}</h2>
+        <p class="dashboard-content-section__subtitle">{{t 'pages.dashboard.started-competences.subtitle'}}</p>
 
-      <CompetenceCard::List @scorecards={{this.startedCompetences}} />
-    </section>
-  {{/if}}
+        <CompetenceCard::List @scorecards={{this.startedCompetences}} />
+      </section>
+    {{/if}}
 
-  {{#if this.hasRecommendedCompetences}}
-    <section class="dashboard-content__section" data-test-recommended-competences>
-      <div class="dashboard-content-section--with-button">
-        <div>
-          <h2 class="dashboard-content-section__title">{{t 'pages.dashboard.recommended-competences.title'}}</h2>
-          <p class="dashboard-content-section__subtitle">{{t 'pages.dashboard.recommended-competences.subtitle'}}</p>
+    {{#if this.hasRecommendedCompetences}}
+      <section class="dashboard-content__section" data-test-recommended-competences>
+        <div class="dashboard-content-section--with-button">
+          <div>
+            <h2 class="dashboard-content-section__title">{{t 'pages.dashboard.recommended-competences.title'}}</h2>
+            <p class="dashboard-content-section__subtitle">{{t 'pages.dashboard.recommended-competences.subtitle'}}</p>
+          </div>
+          <LinkTo @route="profile" class="dashboard-content-section__button">{{t 'pages.dashboard.recommended-competences.profile-link'}}</LinkTo>
         </div>
-        <LinkTo @route="profile" class="dashboard-content-section__button">{{t 'pages.dashboard.recommended-competences.profile-link'}}</LinkTo>
-      </div>
 
-      <CompetenceCard::List @scorecards={{this.recommendedScorecards}} />
-    </section>
-  {{/if}}
+        <CompetenceCard::List @scorecards={{this.recommendedScorecards}} />
+      </section>
+    {{/if}}
+  </div>
+
+  <div class="dashboard-content__certif">
+    <!-- Rajout du bloc certif ultérieurement -->
+    <!-- Div ajoutée afin de créer le layout Grid CSS -->
+  </div>
+
 </section>
