Add form to create a badge from a target profile

--- a/admin/app/components/target-profiles/badges.hbs
+++ b/admin/app/components/target-profiles/badges.hbs
@@ -1,6 +1,11 @@
 <section class="page-section mb_10">
   <header class="page-section__header">
     <h2 class="page-section__title">Clés de lecture</h2>
+    <div class="page-actions">
+      <LinkTo @route="authenticated.target-profiles.target-profile.badges.new" class="btn btn-outline-default btn-thin" aria-label="Nouvelle clé de lecture">
+        <FaIcon @icon="plus"></FaIcon>&nbsp;Nouvelle clé de lecture
+      </LinkTo>
+    </div>
   </header>
 
   <TargetProfiles::BadgeList
