--- a/admin/app/templates/authenticated/organizations/get/target-profiles.hbs
+++ b/admin/app/templates/authenticated/organizations/get/target-profiles.hbs
@@ -1,4 +1,5 @@
 <OrganizationTargetProfilesSection @targetProfiles={{@model.targetProfiles}}
                                    @targetProfilesToAttach={{this.targetProfilesToAttach}}
                                    @attachTargetProfiles={{this.attachTargetProfiles}}
+                                   @goToTargetProfilePage={{this.goToTargetProfilePage}}
 />
