--- a/mon-pix/app/styles/components/campaign-participation-overview/_card.scss
+++ b/mon-pix/app/styles/components/campaign-participation-overview/_card.scss
@@ -43,6 +43,14 @@
   &__see-more {
     padding: 0;
   }
+
+  &__archived {
+    font-family: $font-open-sans;
+    font-size: 0.75rem;
+    font-weight: $font-normal;
+    text-align: center;
+    margin-bottom: 32px;
+  }
 }
 
 .campaign-participation-overview-card-header {
