[ORGA] added number of results in participation list

--- a/orga/app/components/routes/authenticated/campaign/assessment/list.hbs
+++ b/orga/app/components/routes/authenticated/campaign/assessment/list.hbs
@@ -4,6 +4,7 @@
   @selectedBadges={{@selectedBadges}}
   @selectedStages={{@selectedStages}}
   @triggerFiltering={{@triggerFiltering}}
+  @rowCount={{@participations.meta.rowCount}}
 />
 
 <div class="panel">
