[ORGA] trigger and reset filtering for assesment participations

--- a/orga/app/components/routes/authenticated/campaign/assessment/list.hbs
+++ b/orga/app/components/routes/authenticated/campaign/assessment/list.hbs
@@ -5,6 +5,7 @@
   @selectedStages={{@selectedStages}}
   @triggerFiltering={{@triggerFiltering}}
   @rowCount={{@participations.meta.rowCount}}
+  @resetFiltering={{@resetFiltering}}
 />
 
 <div class="panel">
