--- a/mon-pix/app/styles/app.scss
+++ b/mon-pix/app/styles/app.scss
@@ -91,6 +91,7 @@ of an adaptative/mobile-first approach — refactoring is welcome here */
 @import 'components/tutorial-panel';
 @import 'components/user-account';
 @import 'components/user-account-panel';
+@import 'components/user-account-update-email';
 @import 'components/user-certifications-detail-competences-list';
 @import 'components/user-certifications-detail-competence';
 @import 'components/user-certifications-detail-header';
