[API] Check email availability and update it in lower case

--- a/mon-pix/app/styles/components/_user-account-update-email.scss
+++ b/mon-pix/app/styles/components/_user-account-update-email.scss
@@ -23,6 +23,11 @@
     display: flex;
     justify-content: space-between;
   }
+
+  &__error {
+    padding-top: 30px;
+    color: $red;
+  }
 }
 
 .user-account-update-email-actions {
