--- a/mon-pix/app/templates/components/user-account-update-email.hbs
+++ b/mon-pix/app/templates/components/user-account-update-email.hbs
@@ -15,7 +15,6 @@
                        @autocomplete="off"
                        @require={{true}}/>
         </div>
-
         <div class="sign-form-body__input" data-test-new-email-confirmation>
           <FormTextfield @label="{{t 'pages.user-account.account-update-email.fields.new-email-confirmation.label'}}"
                        @textfieldName="newEmailConfirmation"
@@ -25,6 +24,16 @@
                        @validationStatus={{this.newEmailConfirmationValidation.status}}
                        @autocomplete="off"
                        @require={{true}}/>
+        </div>
+        <div class="sign-form-body__input" data-test-password>
+          <FormTextfield @label="{{t 'pages.user-account.account-update-email.fields.password.label'}}"
+                         @textfieldName="password"
+                         @inputBindingValue={{this.password}}
+                         @onValidate={{this.validatePassword}}
+                         @validationMessage={{this.passwordValidation.message}}
+                         @validationStatus={{this.passwordValidation.status}}
+                         @autocomplete="off"
+                         @require={{true}}/>
         </div>
         {{#if this.errorMessage}}
         <div class="user-account-update-email__error">
